# pace-platform

./: .gitignore  Cargo.toml  Makefile  README.md
.config/: zellij.kdl  zellij_layout.kdl  zellij_layout_backend.kdl
.github/workflows/: rust.yml
app/pace-app/: MapView.swift
apps/backend/: Cargo.toml  Readme.md
apps/backend/src/: _main.rs  db_client.rs  main.rs
apps/backend/src/controllers/: auth.rs  event_management.rs  mod.rs  organizer.rs  users.rs  websocket.rs
apps/backend/src/dal/: user.rs
apps/backend/src/models/: image.rs  user.rs
apps/backend/src/tables/: mod.rs  user.rs
apps/ios/pace-app/: Info.plist  pace_app.swift
apps/next/: output.css  package-lock.json  package.json  pnpm-lock.yaml
apps/next/app/: page.tsx
apps/surreal-db/: Cargo.toml  Dockerfile  fly.toml
apps/surreal-db/src/: .main.rs.swp  crud.rs  db_client.rs  main.rs  models.rs  test.rs
apps/surreal-db/src/controllers/: event_marketplace.rs  event_participant.rs  tracker.rs  users.rs
apps/surreal-db/src/models/: db.rs  image.rs  mod.rs  user.rs
apps/surreal-db/src/utils/: log.rs
apps/websockets/: Cargo.toml  Dockerfile  fly.toml
apps/websockets/config/: default.toml
apps/websockets/src/: main.rs
apps/websockets/src/actors/: messages.rs  race.rs  ws.rs
apps/websockets/src/utils/: mod.rs  websocket.rs
backend/: Cargo.toml
backend/benchmarking/: Cargo.toml  location_updates.json
backend/benchmarking/src/: main.rs
backend/dev/: docker-compose.yml
backend/observability/: docker-compose.yml
backend/observability/grafana/: Dockerfile
backend/observability/grafana/dashboards/: pace-websocket-dashboard.json
backend/observability/grafana/provisioning/dashboards/: all.yml
backend/observability/grafana/provisioning/datasources/: datasource.yml
backend/observability/prometheus/: Dockerfile  prometheus.yml
backend/shared/: Cargo.toml
backend/shared/src/: lib.rs  log.rs  model.rs
backend/websockets/: Cargo.toml  Dockerfile  fly.toml  location_updates.json
backend/websockets/config/: default.toml
backend/websockets/src/: main.rs  model.rs  prom.rs
backend/websockets/src/actors/: kafka_consumer.rs  messages.rs  mod.rs  race.rs  ws.rs
crates/libs/: Cargo.toml
crates/libs/src/: mod.rs
crates/shared/: Cargo.toml
crates/surreal-db/: Cargo.toml  Readme.md  fly.toml
crates/surreal-db/src/: main.rs  models.rs
pace-app/pace-app/: Info.plist  MapView.swift  pace_app.swift
pace-app/pace-app.xcodeproj/: project.pbxproj
pace-app/pace-app.xcodeproj/project.xcworkspace/xcuserdata/madr.xcuserdatad/: UserInterfaceState.xcuserstate
pace-app/pace-app.xcodeproj/xcuserdata/madr.xcuserdatad/xcschemes/: xcschememanagement.plist
pace-backend/: Cargo.toml  Makefile
pace-backend/leptos/: Cargo.toml
pace-backend/websockets/: Cargo.toml  fly.toml
pace-backend/websockets/src/: main.rs
pace-beacon/pace-beacon/: MapView.swift  pace_beaconApp.swift
pace-beacon/pace-beacon.xcodeproj/: project.pbxproj
pace-beacon/pace-beacon.xcodeproj/project.xcworkspace/xcuserdata/madr.xcuserdatad/: UserInterfaceState.xcuserstate
pace-beacon/pace-beacon.xcodeproj/xcuserdata/madr.xcuserdatad/xcschemes/: xcschememanagement.plist
spectator-client/: Dockerfile  fly.toml  package-lock.json  package.json  tailwind.config.js
spectator-client/app/: layout.tsx
spectator-client/app/map/[raceId]/: page.tsx
