[workspace]
members = [
  "apps/*",
  "crates/*",
]
exclude = ["apps/ios", "apps/sveltekit", "apps/next"]

[workspace.package]
version = "0.1.0"
rust-version = "1.69"
edition = "2021"

[workspace.dependencies]
libs = { path = "./crates/libs", version = "0.0.0" }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.70"
thiserror = "1.0.40"
anyhow = "1.0.71"