[package]
name = "backend"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
axum = { version = "0.6.16", features = [ "macros"] }
axum-macros = "0.3.7"
chrono = "0.4.24"
config = { workspace = true }
env_logger = "0.10.0"
hyper = "0.14.26"
libs = { workspace = true }
log = "0.4.17"
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
surrealdb = "1.0.0-beta.9"
thiserror = { version = "1.0.40" }
tokio = { version = "1.28.1", features = ["macros", "rt-multi-thread"] }
tower = { version = "0.4.13", features = ["util", "timeout"] }
tower-http = { version = "0.4.0", features = ["add-extension", "trace"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
utoipa = {version = "3.3.0", features = ["axum_extras"]}
utoipa-swagger-ui = {version = "3.1.3", features = ["axum"] }
