[package]
name = "surreal-db"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
actix-web = { workspace = true }
axum = { version = "0.6.18", features = ["macros"] }
axum-macros = "0.3.7"
chrono = "0.4.24"
config = { workspace = true }
libs = { workspace = true }
serde = { workspace = true, features = ["derive"] }
surrealdb = "1.0.0-beta.9"
thiserror = { version = "1.0.40" }
tokio = { version = "1.28.1", features = ["macros", "rt-multi-thread"] }
tower = { version = "0.4.13", features = ["util", "timeout"] }
tower-http = { version = "0.4.0", features = ["add-extension", "trace"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
uuid = { version = "1.3.3", features = ["serde", "v4"] }
