[package]
name = "websockets"
version = "0.1.0"
edition = "2021"

[dependencies]
# local dependencies
actix = { workspace = true }
actix-web = { workspace = true }
actix-web-actors = { workspace = true }
libs = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true}

# non-local dependencies
actix-cors = "0.6.4"
bincode = "1.3.3"
tracing = "0.1.37"
uuid = { version = "1.3.2", features = ["v4", "serde"] }
