[package]
name = "websockets"
version = "0.1.0"
edition = "2021"

[dependencies]
actix = { workspace = true }
actix-cors = "0.6.4"
actix-web = { workspace = true }
actix-web-actors = { workspace = true }
bincode = "1.3.3"
config = { workspace = true }
console-subscriber = "0.1.8"
libs = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true}
thiserror = "1.0.40"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
uuid = { version = "1.3.3", features = ["v4", "serde"] }
