[package]
name = "websockets"
version = "0.1.0"
edition = "2021"

[dependencies]
actix = { version = "0.13.0" }
actix-cors = "0.6.4"
actix-web = {version = "4.3.1" }
actix-web-actors = {version = "4.2.0" }
bincode = "1.3.3"
config = { version = "0.13" }
console-subscriber = "0.1.8"
libs = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true}
thiserror = "1.0.40"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
uuid = { version = "1.3.3", features = ["v4", "serde"] }
