[package]
name = "benchmarking"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8.4"
futures = "0.3.28"
tracing = "0.1.37"
shared = { path = "../shared"}
tungstenite = "0.19.0"
url = "2.2.2"
tokio-tungstenite = { version = "0.19", features = ["native-tls"] }