[package]
name = "websockets"
version = "0.1.0"
edition = "2021"

[dependencies]
actix = "0.10.0"
actix-web = "3.0.0"
actix-web-actors = "3.0.0"
shared = { path = "../shared"}
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1.37"
uuid = { version = "1.3.2", features = ["v4", "serde"] }
bincode = "1.3.3"
serde_json = "1.0.70"
actix-cors = "0.5.4"
prometheus = "0.13"
lazy_static = "1.4"
chrono = "0.4.26"
rdkafka = { version = "0.29.0", features = ["cmake-build"] }

